@@ -40,6 +40,7 @@ public class OllirExprGeneratorVisitor extends PreorderJmmVisitor<Void, OllirExp
         addVisit(INTEGER_LITERAL, this::visitInteger);
         addVisit("ArrayNew", this::visitNewArray);
         addVisit("TypeID", this::visitTypeId);
+        addVisit("If", this::visitIfStmt);
         setDefaultVisit(this::defaultVisit);
     }
 
@@ -56,36 +57,27 @@ public class OllirExprGeneratorVisitor extends PreorderJmmVisitor<Void, OllirExp
         return new OllirExprResult(type);
     }
 
+    private OllirExprResult visitIfStmt(JmmNode node, Void unused) {
+        return new OllirExprResult("if");
+    }
+
     private OllirExprResult visitNewArray(JmmNode node, Void unused) {
-        System.out.println("NODE NEW ARRAY:  " + node);
-        System.out.println("child nodes: " + node.getChildren());
-        JmmNode arrayNew = node.getChildren().get(0);
-        System.out.println("child nodes: " + arrayNew.getChildren());
-        System.out.println("child nodes: " + arrayNew.getChildren().size());
+        JmmNode arrayNew = node.getChildren().getFirst();
         StringBuilder code = new StringBuilder();
-        System.out.println("ARRAY NEW: "+ arrayNew.getChildren().getFirst());
-        System.out.println(arrayNew.getChild(0));
 
         OllirExprResult typeId = null;
         for(JmmNode child : arrayNew.getChildren()) {
-            System.out.println("CHILD NODE 1: " + child);
             if(child.getKind().equals("NewArray")) continue;
-            System.out.println("CHILD NODE 2: " + child);
 
             if(child.getKind().equals("TypeID"))  {
                 typeId = visit(child, unused);
-                System.out.println("TYPE ID1: " + typeId);
                 code.append("new(array,");
             }
             else if(types.getExprType(child) != null) {
-                System.out.println(child);
                 String val = child.get("value");
                 String childTypeId = ollirTypes.toOllirType(types.getExprType(child));
-                System.out.println("TYPE ID: " + childTypeId);
-                System.out.println("TYPE VAL: " + val);
                 code.append(val).append(childTypeId);
             }
-            System.out.println("CHILD NODE 4: " + child);
 
         }
         code.append(").array");
